HT/k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-app
